Added carousel project for clients section. Changed scss/html in trends section.

--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -26,7 +26,7 @@
       <nav class="header__nav">
         <ul class="header__menu">
           <li class="header__menu-item">
-            <a href="/index/index.html" class="header__menu-item-link">
+            <a class="header__menu-item-link" href="#">
               HOME
             </a>
           </li>
@@ -361,32 +361,31 @@
   </section>
 
   <section class="trends">
-    <div class="container trends__container">
-      <div class="trends__upper">
-        <div class="trends__upper-left">
-          <h3 class="trends__title">
-            <span class="trends__title-span">
-              Follow
-            </span>
-            trends.
-          </h3>
-          <p class="trends__upper-text">
-            The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-            1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" are also reproduced
-          </p>
-        </div>
-        <div class="trends__upper-right">
-          <div class="trends__upper-img">
-
-          </div>
+    <div class=" container trends__upper">
+      <div class="trends__upper-left">
+        <h3 class="trends__title">
+          <span class="trends__title-span">
+            Follow
+          </span>
+          trends.
+        </h3>
+        <p class="trends__upper-text">
+          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+          1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" are also reproduced
+        </p>
+      </div>
+      <div class="trends__upper-right">
+        <div class="trends__upper-img">
         </div>
       </div>
-      <div class="trends__lower">
-        <div class="trends__lower-left">
+    </div>
+    <div class="trends__lower">
+      <div class="trends__lower-left">
+        <div class="trends__lower-left-wrapper">
           <p class="trends__lower-number">
             7
           </p>
-          <h2 class="trends__lower-title">
+          <h2 class="trends__lower-left-title">
             Years Experience
           </h2>
           <p class="trends__lower-text">
@@ -395,11 +394,30 @@
           </p>
         </div>
       </div>
+      <div class="trends__lower-right">
+        <h2 class="trends__lower-right-title">
+          WATCH OUR VIDEO
+        </h2>
+        <video src="#" class="trends__video">
+          source
+        </video>
+      </div>
+    </div>
+  </section>
+  
+  <section class="clients">
+    <div class="clients__upper">
+      <h2 class="clients__title">
+        FROM OUR CLIENTS
+      </h2>
     </div>
 
+    <div class="clients__lower">
+      <div class="clients__carousel">
 
+      </div>
+    </div>
   </section>
-
 
 </body>
 
