Index.html: added news section with accordion slider, added brand and footer sections

--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -404,20 +404,322 @@
       </div>
     </div>
   </section>
-  
+
   <section class="clients">
-    <div class="clients__upper">
-      <h2 class="clients__title">
-        FROM OUR CLIENTS
-      </h2>
+    <div class="container">
+      <div class="clients__upper">
+        <h3 class="clients__title">
+          FROM OUR CLIENTS
+        </h3>
+        <div class="clients__arrow-wrapper">
+          <div class="clients__arrow clients__arrow--left">
+            <svg width="23" height="43" viewBox="0 0 23 43" fill="#f8f8f8" xmlns="http://www.w3.org/2000/svg">
+              <line class="clients__arrow-line" x1="22.2929" y1="41.7071" x2="1.29289" y2="20.7071" stroke="#000"
+                stroke-width="2" />
+              <line class="clients__arrow-line" x1="1.29289" y1="21.2929" x2="21.2929" y2="1.29289" stroke="#000"
+                stroke-width="2" />
+            </svg>
+          </div>
+          <div class="clients__arrow clients__arrow--right">
+            <svg width="23" height="43" viewBox="0 0 23 43" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <line class="clients__arrow-line" x1="0.707107" y1="1.29289" x2="21.7071" y2="22.2929" stroke="#000"
+                stroke-width="2" />
+              <line class="clients__arrow-line" x1="21.7071" y1="21.7071" x2="1.70711" y2="41.7071" stroke="#000"
+                stroke-width="2" />
+            </svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="clients__lower">
+        <div class="clients__carousel">
+          <div class="clients__lower--left">
+            <div class="clients__pic">
+
+            </div>
+
+            <p class="clients__name">
+              ADAM STONE
+            </p>
+            <p class="clients__text">
+              “Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie
+              luctus.Lorem ipsum Dolor tusima olatiup”.
+            </p>
+          </div>
+          <div class="clients__lower--right">
+            <div class="clients__pic">
+
+            </div>
+
+            <p class="clients__name">
+              ADAM STONE
+            </p>
+            <p class="clients__text">
+              “Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie
+              luctus.Lorem ipsum Dolor tusima olatiup”.
+            </p>
+          </div>
+        </div>
+      </div>
+
     </div>
+  </section>
 
-    <div class="clients__lower">
-      <div class="clients__carousel">
+  <section class="news ">
+    <div class="container news__container">
+      <div class="news__side news__side--left">
+        <h2 class="news__title">
+          News.
+        </h2>
 
+        <div class="news__accordion">
+          <div class="news__accordion-tab">
+            <div class="news__accordion-tab-upper">
+              <h4 class="news__accordion-title">
+                HOW TO DESIGN WELL?
+              </h4>
+              <div class="news__accordion-btn">
+                <img src="../../images/index-news/accordion-arrow.png" alt="arrow"
+                  class="news__accordion-arrow news__accordion-arrow--active">
+              </div>
+            </div>
+            <div class="news__accordion-tab-lower news__accordion-tab--slide-down">
+              <a href="#" class="news__accordion-link">
+                Explore
+              </a>
+              <p class="news__acccordion-text">
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                Sections 1.10.32 and 1.10.33
+              </p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="news__accordion-tab">
+          <div class="news__accordion-tab-upper">
+            <h4 class="news__accordion-title">
+              WELCOME TO OUR NEW SITE
+            </h4>
+            <div class="news__accordion-btn">
+              <img class="news__accordion-arrow" src="../../images/index-news/accordion-arrow.png" alt="arrow">
+            </div>
+          </div>
+          <div class="news__accordion-tab-lower">
+            <a href="#" class="news__accordion-link">
+              Explore
+            </a>
+            <p class="news__acccordion-text">
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+              Sections 1.10.32 and 1.10.33
+            </p>
+          </div>
+        </div>
+
+        <div class="news__accordion-tab">
+          <div class="news__accordion-tab-upper">
+            <h4 class="news__accordion-title">
+              TRENDING 2021
+            </h4>
+            <div class="news__accordion-btn">
+              <img src="../../images/index-news/accordion-arrow.png" alt="arrow" class="news__accordion-arrow">
+            </div>
+          </div>
+
+          <div class="news__accordion-tab-lower">
+            <a href="#" class="news__accordion-link">
+              Explore
+            </a>
+            <p class="news__acccordion-text">
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+              Sections 1.10.32 and 1.10.33
+            </p>
+          </div>
+        </div>
+
+
+        <div class="news__accordion-tab">
+          <div class="news__accordion-tab-upper">
+            <h4 class="news__accordion-title">
+              BEST WOOD FOR TABLES
+            </h4>
+            <div class="news__accordion-btn">
+              <img src="../../images/index-news/accordion-arrow.png" alt="arrow" class="news__accordion-arrow">
+            </div>
+          </div>
+
+          <div class="news__accordion-tab-lower">
+            <a href="#" class="news__accordion-link">
+              Explore
+            </a>
+            <p class="news__acccordion-text">
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+              Sections 1.10.32 and 1.10.33
+            </p>
+          </div>
+        </div>
+
+        <div class="news__accordion-tab">
+          <div class="news__accordion-tab-upper">
+            <h4 class="news__accordion-title">
+              NEW CONTACT FORM
+            </h4>
+            <div class="news__accordion-btn">
+              <img src="../../images/index-news/accordion-arrow.png" alt="arrow" class="news__accordion-arrow">
+            </div>
+          </div>
+
+          <div class="news__accordion-tab-lower">
+            <a href="#" class="news__accordion-link">
+              Explore
+            </a>
+            <p class="news__acccordion-text">
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+              Sections 1.10.32 and 1.10.33
+            </p>
+          </div>
+        </div>
+
+
+        <div class="news__accordion-tab">
+          <div class="news__accordion-tab-upper">
+            <h4 class="news__accordion-title">
+              TRENDING COLORS
+            </h4>
+            <div class="news__accordion-btn">
+              <img src="../../images/index-news/accordion-arrow.png" alt="arrow" class="news__accordion-arrow">
+            </div>
+          </div>
+
+          <div class="news__accordion-tab-lower">
+            <a href="#" class="news__accordion-link">
+              Explore
+            </a>
+            <p class="news__acccordion-text">
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+              Sections 1.10.32 and 1.10.33
+            </p>
+          </div>
+        </div>
+
+      </div>
+      <div class="news__side news__side--right">
+        <div class="news__pic">
+
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="brands">
+    <div class="brands__container container">
+      <div class="brands__item brands__item--first">
+      </div>
+      <div class="brands__item brands__item--second">
+      </div>
+      <div class="brands__item brands__item--third">
+      </div>
+      <div class="brands__item brands__item--fourth">
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <a href="#" class="footer__logo">
+      <img class="footer__logo-link" src="../../images/logo-black.png" alt="logo">
+    </a>
+
+    <p class="footer__rights">
+      © Sentro 2021 <br>
+      All Rights Resevered
+    </p>
+
+    <ul class="footer__menu footer__menu--secondary">
+      <li class="footer__menu-item">
+        <a href="#" class="footer__menu-link">
+          Site Map
+        </a>
+      </li>
+      <li class="footer__menu-item">
+        <a href="#" class="footer__menu-link">
+          Terms & Conditions
+        </a>
+      </li>
+      <li class="footer__menu-item">
+        <a href="#" class="footer__menu-link">
+          Privacy Policy
+        </a>
+      </li>
+      <li class="footer__menu-item">
+        <a href="#" class="footer__menu-link">
+          Help
+        </a>
+      </li>
+      <li class="footer__menu-item">
+        <a href="#" class="footer__menu-link">
+          Affiliated
+        </a>
+      </li>
+    </ul>
+
+    <ul class="footer__menu footer__menu--primary">
+      <li class="footer__menu-item">
+        <a href="#" class="footer__menu-link">
+          Home
+        </a>
+      </li>
+      <li class="footer__menu-item">
+        <a href="#" class="footer__menu-link">
+          About
+        </a>
+      </li>
+      <li class="footer__menu-item">
+        <a href="#" class="footer__menu-link">
+          Portfolio
+        </a>
+      </li>
+      <li class="footer__menu-item">
+        <a href="#" class="footer__menu-link">
+          News
+        </a>
+      </li>
+      <li class="footer__menu-item">
+        <a href="#" class="footer__menu-link">
+          Contact
+        </a>
+      </li>
+    </ul>
+
+
+    <ul class="footer__languages">
+      <li class="footer__languages-item">
+        ENG
+      </li>
+      <li class="footer__languages-item">
+        FRA
+      </li>
+      <li class="footer__languages-item">
+        GER
+      </li>
+    </ul>
+
+    <ul class="socials">
+      <li class="socials__item">
+        <a href="#" class="socials__link socials__link--first">
+        </a>
+      </li>
+      <li class="socials__item">
+        <a href="#" class="socials__link socials__link--second">
+        </a>
+      </li>
+      <li class="socials__item">
+        <a href="#" class="socials__link socials__link--third">
+        </a>
+      </li>
+    </ul>
+
+  </footer>
 
 </body>
 
