Index: added responsiveness to upper header, partly added to header, added mobile menu toggle fn, changed folder structure for imgs

--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -14,16 +14,21 @@
 
   <script src="../../libs/swiper/swiper-bundle.min.js"></script>
   <script src="../../common-blocks/services/services.js" defer></script>
+  <script src="../../common-blocks/header-upper/header-upper.js" defer></script>
   <script src="index.js" defer></script>
 </head>
 
 <body>
   <header class="header">
     <div class="header__upper">
+      <button class="header__mobile-btn--open">
+      </button>
       <a class="header__logo" href="#">
-        <img class="header__logo-benhome" src="../../images/header/logo-white.png" alt="logo-white">
+        <img class="header__logo-benhome" src="../../images/general-imgs/logo-white.png" alt="logo-white">
       </a>
       <nav class="header__nav">
+        <button class="header__mobile-btn--close">
+        </button>
         <ul class="header__menu">
           <li class="header__menu-item">
             <a class="header__menu-item-link" href="#">
@@ -153,9 +158,6 @@
         </a>
       </div>
     </div>
-
-
-
 
     <div class="card portfolio__card portfolio__card--second">
       <div class="card__info">
@@ -434,10 +436,8 @@
       <div class="clients__lower">
         <div class="clients__carousel">
           <div class="clients__lower--left">
-            <div class="clients__pic">
-
+            <div class="clients__pic clients__pic--first">
             </div>
-
             <p class="clients__name">
               ADAM STONE
             </p>
@@ -447,10 +447,8 @@
             </p>
           </div>
           <div class="clients__lower--right">
-            <div class="clients__pic">
-
+            <div class="clients__pic clients__pic--second">
             </div>
-
             <p class="clients__name">
               ADAM STONE
             </p>
@@ -479,7 +477,7 @@
                 HOW TO DESIGN WELL?
               </h4>
               <div class="news__accordion-btn">
-                <img src="../../images/index-news/accordion-arrow.png" alt="arrow"
+                <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
                   class="news__accordion-arrow news__accordion-arrow--active">
               </div>
             </div>
@@ -502,7 +500,8 @@
               WELCOME TO OUR NEW SITE
             </h4>
             <div class="news__accordion-btn">
-              <img class="news__accordion-arrow" src="../../images/index-news/accordion-arrow.png" alt="arrow">
+              <img class="news__accordion-arrow" src="../../images/pages/index-page/news-section/accordion-arrow.png"
+                alt="arrow">
             </div>
           </div>
           <div class="news__accordion-tab-lower">
@@ -522,7 +521,8 @@
               TRENDING 2021
             </h4>
             <div class="news__accordion-btn">
-              <img src="../../images/index-news/accordion-arrow.png" alt="arrow" class="news__accordion-arrow">
+              <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
+                class="news__accordion-arrow">
             </div>
           </div>
 
@@ -544,7 +544,8 @@
               BEST WOOD FOR TABLES
             </h4>
             <div class="news__accordion-btn">
-              <img src="../../images/index-news/accordion-arrow.png" alt="arrow" class="news__accordion-arrow">
+              <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
+                class="news__accordion-arrow">
             </div>
           </div>
 
@@ -565,7 +566,8 @@
               NEW CONTACT FORM
             </h4>
             <div class="news__accordion-btn">
-              <img src="../../images/index-news/accordion-arrow.png" alt="arrow" class="news__accordion-arrow">
+              <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
+                class="news__accordion-arrow">
             </div>
           </div>
 
@@ -587,7 +589,8 @@
               TRENDING COLORS
             </h4>
             <div class="news__accordion-btn">
-              <img src="../../images/index-news/accordion-arrow.png" alt="arrow" class="news__accordion-arrow">
+              <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
+                class="news__accordion-arrow">
             </div>
           </div>
 
@@ -605,7 +608,6 @@
       </div>
       <div class="news__side news__side--right">
         <div class="news__pic">
-
         </div>
       </div>
 
@@ -627,7 +629,7 @@
 
   <footer class="footer">
     <a href="#" class="footer__logo">
-      <img class="footer__logo-link" src="../../images/logo-black.png" alt="logo">
+      <img class="footer__logo-link" src="../../images/general-imgs/logo-black.png" alt="logo">
     </a>
 
     <p class="footer__rights">
