Portfolio page: added responsiveness from 1920px to 320px; added toggle cards fn for gallery.

--- a/pages/portfolio/portfolio.html
+++ b/pages/portfolio/portfolio.html
@@ -8,21 +8,28 @@
   <title>Benhome: projects</title>
 
   <link rel="stylesheet" href="../../libs/reset/reset.css">
-  <link rel="stylesheet" href="../../common/fonts.css">
+  <link rel="stylesheet" href="../../fonts/stylesheet.css">
   <link rel="stylesheet" href="css/portfolio.css">
+
+  <script src="../../common-blocks/header-upper/header-upper.js" defer></script>
+  <script src="./portfolio.js" defer></script>
 
 </head>
 
 <body>
   <header class="header">
     <div class="header__upper">
+      <button class="header__mobile-btn--open">
+      </button>
       <a class="header__logo" href="#">
-        <img class="header__logo-benhome" src="../../images/about/logo.png" alt="benhome">
+        <img class="header__logo-benhome" src="../../images/general-imgs/logo-black.png" alt="logo-white">
       </a>
       <nav class="header__nav">
+        <button class="header__mobile-btn--close">
+        </button>
         <ul class="header__menu">
           <li class="header__menu-item">
-            <a href="/index/index.html" class="header__menu-item-link">
+            <a class="header__menu-item-link" href="#">
               HOME
             </a>
           </li>
@@ -58,11 +65,6 @@
         </a>
       </div>
     </div>
-    <div class="header__lower">
-      <h1 class="header__title">
-        News.
-      </h1>
-    </div>
   </header>
 
   <section class="projects">
@@ -70,16 +72,16 @@
     <div class="projects__upper container">
       <nav class="projects__nav">
         <ul class="projects__menu">
-          <li class="projects__menu-item">
+          <li class="projects__menu-item projects__menu-item--all">
             All
           </li>
-          <li class="projects__menu-item">
+          <!-- <li class="projects__menu-item">
             Architecture
-          </li>
-          <li class="projects__menu-item">
+          </li> -->
+          <li class="projects__menu-item projects__menu-item--exterior">
             Exterior
           </li>
-          <li class="projects__menu-item">
+          <li class="projects__menu-item projects__menu-item--interior">
             Interior
           </li>
         </ul>
@@ -88,13 +90,13 @@
 
     <div class="projects__lower">
 
-      <div class="card projects__card">
+      <div class="card projects__card projects__card--first">
 
         <div class="card__info">
           <p class="card__category projects__card-category">
             ARCHITECTURE
           </p>
-          <h2 class="card__title">
+          <h2 class="card__title projects__card-title">
             House in <br>
             Forest
           </h2>
@@ -110,13 +112,13 @@
         </div>
       </div>
 
-      <div class="card projects__card">
+      <div class="card projects__card projects__card--second">
 
         <div class="card__info">
           <p class="card__category projects__card-category">
             ARCHITECTURE
           </p>
-          <h2 class="card__title">
+          <h2 class="card__title projects__card-title">
             House in <br>
             Forest
           </h2>
@@ -132,13 +134,13 @@
         </div>
       </div>
 
-      <div class="card projects__card">
+      <div class="card projects__card projects__card--third">
 
         <div class="card__info">
           <p class="card__category projects__card-category">
             ARCHITECTURE
           </p>
-          <h2 class="card__title">
+          <h2 class="card__title projects__card-title">
             House in <br>
             Forest
           </h2>
@@ -154,13 +156,13 @@
         </div>
       </div>
 
-      <div class="card projects__card">
+      <div class="card projects__card projects__card--fourth">
 
         <div class="card__info">
           <p class="card__category projects__card-category">
             ARCHITECTURE
           </p>
-          <h2 class="card__title">
+          <h2 class="card__title projects__card-title">
             House in <br>
             Forest
           </h2>
@@ -176,13 +178,13 @@
         </div>
       </div>
 
-      <div class="card projects__card">
+      <div class="card projects__card projects__card--fifth">
 
         <div class="card__info">
           <p class="card__category projects__card-category">
             ARCHITECTURE
           </p>
-          <h2 class="card__title">
+          <h2 class="card__title projects__card-title">
             House in <br>
             Forest
           </h2>
@@ -198,13 +200,13 @@
         </div>
       </div>
 
-      <div class="card projects__card">
+      <div class="card projects__card projects__card--sixth">
 
         <div class="card__info">
           <p class="card__category projects__card-category">
             ARCHITECTURE
           </p>
-          <h2 class="card__title">
+          <h2 class="card__title projects__card-title">
             House in <br>
             Forest
           </h2>
@@ -220,13 +222,13 @@
         </div>
       </div>
 
-      <div class="card projects__card">
+      <div class="card projects__card projects__card--seventh">
 
         <div class="card__info">
           <p class="card__category projects__card-category">
             ARCHITECTURE
           </p>
-          <h2 class="card__title">
+          <h2 class="card__title projects__card-title">
             House in <br>
             Forest
           </h2>
@@ -242,13 +244,13 @@
         </div>
       </div>
 
-      <div class="card projects__card">
+      <div class="card projects__card projects__card--eighth">
 
         <div class="card__info">
           <p class="card__category projects__card-category">
             ARCHITECTURE
           </p>
-          <h2 class="card__title">
+          <h2 class="card__title projects__card-title">
             House in <br>
             Forest
           </h2>
@@ -264,13 +266,13 @@
         </div>
       </div>
 
-      <div class="card projects__card">
+      <div class="card projects__card projects__card--nineth">
 
         <div class="card__info">
           <p class="card__category projects__card-category">
             ARCHITECTURE
           </p>
-          <h2 class="card__title">
+          <h2 class="card__title projects__card-title">
             House in <br>
             Forest
           </h2>
